syntax = "proto3";

import "account.proto";
import "status.proto";
import "tag.proto";


option csharp_namespace = "Mastodon.Grpc";

message SearchResult {
	repeated Account accounts = 1;
	repeated Status statuses = 2;
	repeated Tag hashtags = 3;
}

message SearchResults {
   repeated SearchResult data = 1;
}
